fix menu alignment

--- a/src/style.css
+++ b/src/style.css
@@ -36,7 +36,7 @@
 
 .nav-list {
   width: 100%;
-  justify-content: space-around;
+  justify-content: flex-end;
 }
 
 .nav-list__link {
